packages/ak-navigation/src/index.less
@import 'shared-variables.less';
@import 'ak-navigation-link.less';

@ak-navigation-global-color: @ak-color-B500;
@ak-navigation-container-color: @ak-color-N20;
@ak-navigation-container-name-color: @ak-color-N500;

@global-primary-item-margin: 25px;
@global-secondary-item-margin: 10px;
@global-secondary-item-height: 30px;
@container-logo-size: 40px;
@container-logo-border-radius: 3px;

@font-size: 14px;

.blanket:not(.blanket-active) {
  display: none;
}

.navigation {
  background-color: @ak-navigation-container-color;
  top: 0;
  left: 0;
  position: fixed;
  height: 100%;
  display: flex;

  &.should-animate {
    transition: width 250ms, transform 250ms;
  }

  .global {
    display: flex;
    flex: 0 0 @global-bar-width;
    background-color: @ak-navigation-global-color;
    color: white;
    flex-direction: column;
    align-items: center;
    position: relative;

    .global-primary {
      margin: @global-primary-item-margin auto;
      text-align: center;

      a {
        color: currentColor;
      }
    }

    .global-secondary-item {
      margin: 10px auto;
      height: @global-secondary-item-height;
      text-align: center;
    }

    .global-bottom {
      margin-top: auto;
      width: 100%;
    }
  }

  .container {
    padding: 20px 0;
    overflow: hidden;
    width: 100%;
  }

  .container-logo {
    width: @container-logo-size;
    height: @container-logo-size;
    border-radius: @container-logo-border-radius;
    margin-right: 10px;
    
    &:not([src]) {
      visibility: hidden;
    }
  }

  .container-name {
    color: @ak-navigation-container-name-color;
    display: flex;
    align-items: center;
    margin-bottom: 10px;
    font-weight: bold;
  }

  .container-name-text {
    width: @container-link-text-expanded-width;
    font-size: @font-size;
    line-height: @font-size;
    max-height: @font-size * 2;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .container-links {
    font-size: @font-size;
  }
}

